--- a/page17.html
+++ b/page17.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-3z" data-rv-view="408">
+<section id="menu-3z" data-rv-view="307">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-41" data-rv-view="412" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a href="https://mobirise.co/c">web page maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-41" data-rv-view="311" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
@@ -79,7 +79,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-40" data-rv-view="410" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-40" data-rv-view="309" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
