--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="32" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="32" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -119,7 +119,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/fotojet-8-600x4000.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/fotojet-8-600x4001.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">The True Story of Conrad Birdie</h4>
                         <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
