--- a/Archives.html
+++ b/Archives.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free website software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="142" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="142" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -183,7 +183,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/fotojet-8-600x4000.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/fotojet-8-600x40028.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">The True Story of Conrad Birdie</h4>
                         <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
