--- a/Opinions.html
+++ b/Opinions.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="136" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1g" data-rv-view="136" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">St. John's for a Newcomer</h3>
+                            <h3 class="mbr-section-title display-2">The Downside of the Fat-Acceptance Movement: A Reflection on the Outlook of Skinny People in Today’s Society</h3>
 
                             <div class="mbr-section-text">
-                                <p>A perspective of St. John's from a new student. <br><br></p>
+                                <p>Written By: Camille Kummer<br><br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page34.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page42.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/screen-shot-2017-11-15-at-8.19.11-am-524x391.png"></div>
+                            <div class="mbr-figure"><img src="assets/images/bodyimage-feat-1400x726.png"></div>
                         </div>
 
                     </div>
@@ -145,12 +145,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/code-man.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/screen-shot-2017-11-15-at-8.27.14-am-493x271.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :) </p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">St. John's for a Newcomer</h4>
+                        <h5 class="card-subtitle">Written By: Ilinca Maria-Manda</h5>
+                        <p class="card-text">A perspective of St. John's from a new student.&nbsp;<br></p>
+                        <div class="card-btn"><a href="page34.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
