--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web page maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,10 +73,10 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">December Site Contest</h3>
+                            <h3 class="mbr-section-title display-2">January Site Contest</h3>
 
                             <div class="mbr-section-text">
-                                <p>For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of Christmas break. The first 10 people to get all the answers correct or almost all correct will get a small prize.</p>
+                                <p>For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of January. The first 10 people to get all the answers correct or almost all correct will get a small prize.</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-secondary" href="page39.html">MORE</a> </div>
@@ -119,7 +119,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/fotojet-8-600x40028.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/fotojet-8-600x40030.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">The True Story of Conrad Birdie</h4>
                         <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
@@ -145,12 +145,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/screen-shot-2017-11-15-at-8.19.11-am-524x391.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/bodyimage-feat-600x311.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">St. John's for a Newcomer</h4>
-                        <h5 class="card-subtitle">Written By: Ilinca Maria Manda</h5>
-                        <p class="card-text">A perspective of St. John's from a new student.&nbsp;</p>
-                        <div class="card-btn"><a href="page34.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">The Downside of the Fat-Acceptance Movement:</h4>
+                        <h5 class="card-subtitle">Written By: Camille Kummer</h5>
+                        <p class="card-text">A Reflection on the Outlook of Skinny People in Today’s Society.</p>
+                        <div class="card-btn"><a href="page42.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
