--- a/page39.html
+++ b/page39.html
@@ -58,14 +58,14 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-dq" data-rv-view="906" style="background-image: url(assets/images/mbr-1618x1080.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website for free</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-dq" data-rv-view="906" style="background-image: url(assets/images/mbr-1618x1080.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
 
     <div class="container">
-        <h3 class="mbr-section-title display-2">December Site Context</h3>
-        <div class="lead">For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of Christmas break. The first 10 people to get all the answers correct or almost all correct will get a small prize.</div>
+        <h3 class="mbr-section-title display-2">January Site Context</h3>
+        <div class="lead">For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of January. The first 10 people to get all the answers correct or almost all correct will get a small prize.</div>
     </div>
 
 </section>
