--- a/page42.html
+++ b/page42.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/20988002-1378120402302790-1549326759-n-1-130x128.png" type="image/x-icon">
   <meta name="description" content="A Reflection on the Outlook of Skinny People in Today’s Society.">
-  <title>Camille's Article</title>
+  <title>The Downside of the Fat-Acceptance Movement</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-ep" data-rv-view="953" style="background-color: rgb(145, 189, 174); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co/b">web page creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-ep" data-rv-view="953" style="background-color: rgb(145, 189, 174); padding-top: 80px; padding-bottom: 80px;">
 
     
     <div class="container">
