--- a/page27.html
+++ b/page27.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free site builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-7q" data-rv-view="465" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/d">web software</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-7q" data-rv-view="465" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 1; background-color: rgb(145, 189, 174);">
     </div>
@@ -84,7 +84,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-globe mbr-iconfont mbr-iconfont-features7" style="color: rgb(255, 255, 255);"></a></div>
+                    <div class="card-img iconbox"><span class="mbri-globe mbr-iconfont mbr-iconfont-features7" style="color: rgb(255, 255, 255);"></span></div>
                     <div class="card-block">
                         <h4 class="card-title">Capricorn <br>(December 22nd - January 19th)</h4>
                         
