--- a/page34.html
+++ b/page34.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-as" data-rv-view="633" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-as" data-rv-view="633" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -300,7 +300,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/screen-shot-2017-11-15-at-8.27.14-am-493x2717.png"></div>
+                    <div><img src="assets/images/screen-shot-2017-11-15-at-8.27.14-am-493x2719.png"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container"></div>
